<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Medici</string>
    <string name="content_descript" />
    <string name="person_info">Person Information</string>
    <string name="name">Name</string>
    <string name="sex">Sex</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="birthday">Birthday</string>
    <string name="ad">AD</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="education_age">Education Age</string>
    <string name="literacy">Literacy</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="date_of_checking">Date of Checking</string>
    <string name="login">Login</string>
    <string name="hint_login_name">Account</string>
    <string name="hint_login_password">Password</string>
    <string name="login_error">Login Error</string>
    <string name="single_run_message">Login To MediciToday.com to keep your records and better monitoring.</string>
    <string name="history">History</string>
    <string name="basic_test">Basic Test</string>
    <string name="attentiveness">Attentiveness</string>
    <string name="language">Language</string>
    <string name="comprehension">Comprehension</string>
    <string name="how_many_egg">How many egg?</string>
    <string name="how_many_apple">How many apple?</string>
    <string name="what_is_this">What is this?</string>
    <string name="what_is_number">What is number?</string>
    <string name="memory">Memory</string>
    <string name="personal_information">Personal Info</string>
    <string name="examination">Examination</string>
    <string name="register">Register</string>
    <string name="smoking">Smoking</string>
    <string name="age">Age</string>
    <string name="single_run">Single Run</string>
    <string name="patient:">Patient:</string>
    <string name="visual_acuity">Visual Acuity</string>
    <string name="where_the_E_opens">where the “E” opens</string>
    <string name="caretaker:">Caretaker:</string>
    <string name="hold_device_at_arm_length">Hold device at Arm length - May help Patient input response</string>
    <string name="audio_acuity">Audio Acuity</string>
    <string name="yes_no">Yes / No</string>
    <string name="provide_ear_phones">Provide ear phones</string>
    <string name="tremor_test">Tremor Test</string>
    <string name="holds_tablet">Hold’s tablet</string>
    <string name="instructs_and_starts_test">Instructs and starts test</string>
    <string name="attention">Attention</string>
    <string name="facilitate_answer_input">Facilitate answer input</string>
    <string name="visual_spatial">Visual Spatial</string>
    <string name="test_patient_visual_spatial">Test Patient Visual Spatial</string>
    <string name="monitor">Monitor</string>
    <string name="test_short_term_and_long_term_memory">Test Short term and long term memory</string>
    <string name="exam_hear_info">Hear the tone.</string>
    <string name="do_i_hear_a_tone">Do I hear a tone ?</string>
    <string name="on_air">ON AIR</string>
    <string name="ready">Ready</string>
    <string name="start">Start</string>
    <string name="create_account">Create Account</string>
    <string name="previous_run">Previous run</string>
    <string name="sign_in">Sign In</string>
    <string name="visual_info">Select which side “E” Opens.\n\nCaretaker: Holds 1 meter away from patient.</string>
    <string name="attention_time_info">Answer what date it is.</string>
    <string name="what_month">What Month is it?</string>
    <string name="what_day">What is the date?</string>
    <string name="what_weekday">What is the week day?</string>

</resources>