<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res/com.medici.app">

    <RelativeLayout
        android:id="@+id/login_main_layout"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/menu_option" >

        <TextView
            android:id="@+id/login_title"
            style="@style/menu_option_title"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/login"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:id="@+id/separate_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/login_title"
            android:background="@color/separate_line" />

        <LinearLayout
            android:id="@+id/LinearLayoutLoginEditMain"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@+id/separate_line"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp" >

            <EditText
                android:id="@+id/login_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/style_edit_text"
                android:hint="@string/hint_login_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxEms="20"
                android:textColor="@color/Black_Gray"
                android:textColorHint="#9e9e9e"
                android:textSize="16sp" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="0.5"
                android:background="@drawable/style_edit_text"
                android:ems="10"
                android:hint="@string/hint_login_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/Black_Gray"
                android:textColorHint="#9e9e9e"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutLoginButtonMain"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/LinearLayoutLoginEditMain"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <com.medici.app.view.ShapButton
                android:id="@+id/shapButtonLogin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_weight="0.5"
                app:borderColorClick="@color/Focus_Blue"
                app:text="@string/login"
                app:textColor="@color/Blue"
                app:textColorClick="@color/Focus_Blue" />

            <com.medici.app.view.ShapButton
                android:id="@+id/shapButtonSingleRun"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/shapButtonLogin"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.5"
                app:borderColorClick="@color/Focus_Blue"
                app:text="@string/single_run"
                app:textColor="@color/Blue"
                app:textColorClick="@color/Focus_Blue" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>