<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayoutTestMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/RelativeLayoutTestItemMain"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/menu_option" >

        <RelativeLayout
            android:id="@+id/RelativeLayoutTestIconBackgroun"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/arrow_yellow" >

            <ImageView
                android:id="@+id/imageViewTestIcon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_descript"
                android:scaleType="fitXY" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollViewExaminationMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/RelativeLayoutTestIconBackgroun" >

            <LinearLayout
                android:id="@+id/LinearLayoutTextMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="vertical"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visual_acuity"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/Black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/LinearLayoutPatientMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textViewPatient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="2dp"
                        android:text="@string/patient:"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/Black" />

                    <ImageView
                        android:id="@+id/imageViewPatient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/content_descript"
                        android:maxHeight="70dp"
                        android:maxWidth="125dp"
                        android:src="@drawable/finger" />

                    <TextView
                        android:id="@+id/textViewPatientOption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/where_the_E_opens"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/Black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayoutCaretakerMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textViewCaretaker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="2dp"
                        android:text="@string/caretaker:"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/Black" />

                    <TextView
                        android:id="@+id/textViewCaretakerOption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hold_device_at_arm_length"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/Black" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>