<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/hear_test_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White" >

        <include
            android:id="@+id/subTestAreaHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            layout="@layout/test_area_header" />

        <RelativeLayout
            android:id="@+id/RelativeLayoutHearingMain"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_below="@+id/textViewHearHint" >

            <ImageView
                android:id="@+id/imageViewSpeaker"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/content_descript"
                android:src="@drawable/headphone_big" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RelativeLayoutHearingArrowMain"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp" >

            <ImageView
                android:id="@+id/imageViewHearOk"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_descript"
                android:scaleType="fitXY"
                android:src="@drawable/ok" />

            <ImageView
                android:id="@+id/imageViewHearNo"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="40dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_descript"
                android:scaleType="fitXY"
                android:src="@drawable/close" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RelativeLayoutHearingPlayMain"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_above="@+id/RelativeLayoutHearingArrowMain"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp" >
        </RelativeLayout>

        <TextView
            android:id="@+id/textViewHearHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subTestAreaHeader"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/do_i_hear_a_tone"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/green"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewOnAir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RelativeLayoutHearingMain"
            android:background="@color/Black"
            android:gravity="center_horizontal"
            android:text="@string/on_air"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/red"
            android:textSize="100sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>